--- a/eTools Ultimate/Views/Pages/Settings/ResourcePathPage.xaml
+++ b/eTools Ultimate/Views/Pages/Settings/ResourcePathPage.xaml
@@ -176,13 +176,13 @@
                             </Grid.ColumnDefinitions>
                             <TextBlock Grid.Column="0" VerticalAlignment="Center" Text="Icons folder" Margin="0,0,8,0"/>
                             <Grid Grid.Column="1" Margin="0,0,8,0">
-                                <TextBox x:Name="ItemIconsFolderPathTextbox" Text="{Binding Settings.ItemIconsFolderPath, Mode=TwoWay}"/>
-                                <TextBlock IsHitTestVisible="False" Text="{Binding Settings.DefaultItemIconsFolderPath, Mode=OneWay}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,10,0" Foreground="DarkGray">
+                                <TextBox x:Name="IconsFolderPathTextbox" Text="{Binding Settings.IconsFolderPath, Mode=TwoWay}"/>
+                                <TextBlock IsHitTestVisible="False" Text="{Binding Settings.DefaultIconsFolderPath, Mode=OneWay}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,10,0" Foreground="DarkGray">
                                     <TextBlock.Style>
                                         <Style TargetType="{x:Type TextBlock}">
                                             <Setter Property="Visibility" Value="Collapsed"/>
                                             <Style.Triggers>
-                                                <DataTrigger Binding="{Binding Text, ElementName=ItemIconsFolderPathTextbox}" Value="">
+                                                <DataTrigger Binding="{Binding Text, ElementName=IconsFolderPathTextbox}" Value="">
                                                     <Setter Property="Visibility" Value="Visible"/>
                                                 </DataTrigger>
                                             </Style.Triggers>
@@ -321,16 +321,30 @@
                             </Button>
                         </Grid>
 
-                        <!-- Item folder-->
+                        <!-- Item icon folder-->
                         <Grid Grid.Row="1" Grid.Column="0" Margin="0,0,10,10">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="120"/>
                                 <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="Auto"/>
                             </Grid.ColumnDefinitions>
-                            <TextBlock Grid.Column="0" VerticalAlignment="Center" Text="Item folder" Margin="0,0,8,0"/>
-                            <TextBox Grid.Column="1" Text="{Binding Settings.ItemPath, Mode=TwoWay}" Margin="0,0,8,0"/>
-                            <Button Grid.Column="2" Width="60" Command="{Binding SelectItemPathCommand}" HorizontalAlignment="Center" Height="35">
+                            <TextBlock Grid.Column="0" VerticalAlignment="Center" Text="Icon folder" Margin="0,0,8,0"/>
+                            <Grid Grid.Column="1" Margin="0,0,8,0">
+                                <TextBox x:Name="ItemIconsFolderPathTextbox"  Text="{Binding Settings.ItemIconsFolderPath, Mode=TwoWay}"/>
+                                <TextBlock IsHitTestVisible="False" Text="{Binding Settings.DefaultItemIconsFolderPath, Mode=OneWay}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,10,0" Foreground="DarkGray">
+                                    <TextBlock.Style>
+                                        <Style TargetType="{x:Type TextBlock}">
+                                            <Setter Property="Visibility" Value="Collapsed"/>
+                                            <Style.Triggers>
+                                                <DataTrigger Binding="{Binding Text, ElementName=ItemIconsFolderPathTextbox}" Value="">
+                                                    <Setter Property="Visibility" Value="Visible"/>
+                                                </DataTrigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </TextBlock.Style>
+                                </TextBlock>
+                            </Grid>
+                            <Button Grid.Column="2" Width="60" Command="{Binding SelectItemIconsFolderCommand}" HorizontalAlignment="Center" Height="35">
                                 <ui:SymbolIcon Symbol="FolderOpen20"/>
                             </Button>
                         </Grid>
