--- a/eTools Ultimate/Views/Pages/Settings/ResourcePathPage.xaml
+++ b/eTools Ultimate/Views/Pages/Settings/ResourcePathPage.xaml
@@ -321,14 +321,14 @@
                             </Button>
                         </Grid>
 
-                        <!-- Item icon folder-->
+                        <!-- Item Item folder-->
                         <Grid Grid.Row="1" Grid.Column="0" Margin="0,0,10,10">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="120"/>
                                 <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="Auto"/>
                             </Grid.ColumnDefinitions>
-                            <TextBlock Grid.Column="0" VerticalAlignment="Center" Text="Icon folder" Margin="0,0,8,0"/>
+                            <TextBlock Grid.Column="0" VerticalAlignment="Center" Text="Item folder" Margin="0,0,8,0"/>
                             <Grid Grid.Column="1" Margin="0,0,8,0">
                                 <TextBox x:Name="ItemIconsFolderPathTextbox"  Text="{Binding Settings.ItemIconsFolderPath, Mode=TwoWay}"/>
                                 <TextBlock IsHitTestVisible="False" Text="{Binding Settings.DefaultItemIconsFolderPath, Mode=OneWay}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,10,0" Foreground="DarkGray">
